Fixed image cropping issue

--- a/style.css
+++ b/style.css
@@ -1276,7 +1276,7 @@ textarea.form-input::-webkit-realizer {
     }
 
     .avatar-box img {
-        width: 120px;
+        width: 150px;
     }
 
     .info-content .name {
